--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,12 +6,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <title>Authentication</title>
+  <title></title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="bundle.js"></script>
+  <script src="http://localhost:4000/pickles/bundle.js"></script>
 </body>
 
 </html>
